--- a/src/index.scss
+++ b/src/index.scss
@@ -14,3 +14,29 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+
+  .card {
+    width: 300px;
+    height: 600px;
+    margin: 1.5rem;
+    padding: 1.5rem;
+    border: 1px solid rgb(209, 208, 208);
+    border-radius: 10px;
+
+    h3 {
+      text-align: center;
+      margin-top: 0;
+    }
+
+    img {
+      display: flex;
+      margin: auto;
+    }
+  }
+}
