add episode to favorites

--- a/src/index.scss
+++ b/src/index.scss
@@ -16,6 +16,7 @@ code {
 }
 
 .container {
+  position: relative;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -37,6 +38,15 @@ code {
     img {
       display: flex;
       margin: auto;
+    }
+
+    button {
+      color: #fff;
+      background-color: black;
+      border-radius: 20px;
+      border: none;
+      padding: 0.7rem;
+      cursor: pointer;
     }
   }
 }
