--- a/src/index.scss
+++ b/src/index.scss
@@ -15,6 +15,28 @@ code {
     monospace;
 }
 
+.nav {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  h1 {
+    margin-bottom: 0;
+  }
+
+  p {
+    margin: 0;
+  }
+}
+
+.favorites {
+  text-align: center;
+
+  span {
+    font-weight: bold;
+  }
+}
+
 .container {
   position: relative;
   display: flex;
@@ -24,7 +46,7 @@ code {
 
   .card {
     width: 300px;
-    height: 600px;
+    height: 440px;
     margin: 1.5rem;
     padding: 1.5rem;
     border: 1px solid rgb(209, 208, 208);
@@ -47,6 +69,7 @@ code {
       border: none;
       padding: 0.7rem;
       cursor: pointer;
+      width: 300px;
     }
   }
 }
